--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 *{
   margin: 0;
   padding: 0;
@@ -16,3 +17,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
