--- a/src/Component/Header/Sidebar.css
+++ b/src/Component/Header/Sidebar.css
@@ -1,11 +1,21 @@
+.container {
+  display: flex;
+  flex-direction: row; /* Make the sidebar and banner appear in a row */
+  width: 100%;
+  margin-left: 5px;
+  margin-top: -8px;
+}
+
 .sidebar {
-    width: 250px;
-    padding: 30px;
-    background-color: #f8f8f8;
-    font-family: Arial, sans-serif;
-    border-right: 1px solid #ddd;
-    
-  }
+  width: 20%; /* Adjust width as needed */
+  background-color: #f4f4f4; /* Example background color */
+}
+
+.banner {
+  width: 80%; /* Adjust width as needed */
+  background-color: #ddd; /* Example background color */
+}
+
   
   .sidebar ul {
     list-style-type: none;
