--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 
 
+/* src/App.css */
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+h1, h2, h3, p, span {
+  font-family: 'Poppins', sans-serif;
+}
 
 .App {
   text-align: center;
